<resources>
    <string name="app_name">PayMate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="WelcomeText">Welcome</string>
    <string name="firstOption">Create Network</string>
    <string name="secondOption">Login Via Username</string>
    <string name="_OR">OR</string>
    <string name="admin_info">Admin Info</string>
    <string name="bottomText">Your Information will be private to you</string>
    <string name="sloganText">Handle your dues more efficiently</string>
    <string name="enterNameHint">Name</string>
    <string name="adminInfo">Admin Info</string>
    <string name="enterPhoneNumberHint">Phone Number</string>
    <string name="enterUserName">Username</string>
    <string name="enterName">Enter Name</string>
    <string name="createPasswordHint">Create Pin</string>
    <string name="confirmPasswordHint">Confirm Pin</string>
    <string name="registerButtonText">Register</string>
    <string name="adminInfoScreenBottomText">All your information is secure and will be only private to you.</string>
    <string name="loginText">Login</string>
    <string name="adminPrefix">admin_</string>
    <string name="loginButtonText">Login</string>
    <string name="pinHint">Pin Number</string>
    <string name="_ForgotPassword">Forgot Password?</string>
    <string name="_RecoverAccount">Account Recovery</string>
    <string name="_Hello">Hello,</string>
    <string name="admin_icon_description">Icon for admin Identity</string>
    <string name="_Add">Add Mate</string>
    <string name="_home">Home</string>
    <string name="_profile">Profile</string>
    <string name="add_dues_image_description">Add Dues</string>
    <string name="administration_image_content_description">Administration Image</string>
    <string name="notify_all_image_description">Notify All Image</string>
    <string name="all_mates_image_description">All mates</string>
    <string name="log_out_image_description">Log Out vector Image</string>
    <string name="mate_info">Mate Info</string>
    <string name="mate_prefix">mate_</string>
    <string name="add_mate_button_text">Add Mate</string>

    <!--    Admin Dashboard Strings-->
    <string name="split_bills">Split Bills</string>
    <string name="all_mates">All Mates</string>
    <string name="notify_all">Notify All</string>
    <string name="_administration">Administration</string>
    <string name="wallet_text">Add Wallet</string>

    <!--    Welcome Screen Strings-->
    <string name="get_started_button_text">Get Started</string>
    <string name="app_name_text">Mate</string>
    <string name="slogan">Handle your dues \n more efficiently \n and easily </string>

    <!--Admin or User Screen Strings-->
    <string name="admin_screen_title">Admin</string>
    <string name="user_screen_title">User</string>


    <!--    Login Screen Strings-->
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="new_here_text">New Here?</string>
    <string name="register_text">Register</string>


    <!--    Registration Screen Strings-->
    <string name="register_button_text">Register</string>
    <string name="already_member">Already Member?</string>
    <string name="name_hint">Full Name</string>
    <string name="create_password_hint">Create Password</string>
    <string name="confirm_password_hint">Confirm Password</string>


    <!--    Splash screen string-->
    <string name="developer_name">Wahaj Sajid</string>
    <string name="developed_by_text">Developed by</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="_Dashboard">Dashboard</string>
    <string name="Email_Hint">Email</string>
    <string name="add_mate">Add Mate</string>
    <string name="phone_hint">Phone</string>
    <string name="hey_mate">Hey,Mate</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp_instructions">"OTP has been send to "</string>
    <string name="enter_code_below">Enter OTP below to continue</string>
    <string name="otp_hint">OTP</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>