<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AdminRegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rgistraion_background">


        <ImageView
            android:id="@+id/registerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.381" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterNameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:boxCornerRadiusBottomEnd="@dimen/boxCornerRadius"
            app:boxCornerRadiusBottomStart="@dimen/boxCornerRadius"
            app:boxCornerRadiusTopEnd="@dimen/boxCornerRadius"
            app:boxCornerRadiusTopStart="@dimen/boxCornerRadius"
            app:boxStrokeColor="#2F80ED"
            app:boxStrokeErrorColor="@color/design_default_color_error"
            app:counterTextAppearance="@style/TextAppearance.AppCompat.Body1"
            app:cursorErrorColor="@color/design_default_color_error"
            app:errorEnabled="true"
            app:errorTextColor="@color/design_default_color_error"
            app:hintAnimationEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/registerText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:inputType="text|textPersonName|textAutoComplete" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterEmailInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="@dimen/boxCornerRadius"
            app:boxCornerRadiusBottomStart="@dimen/boxCornerRadius"
            app:boxCornerRadiusTopEnd="@dimen/boxCornerRadius"
            app:boxCornerRadiusTopStart="@dimen/boxCornerRadius"
            app:boxStrokeColor="#2F80ED"
            app:boxStrokeErrorColor="@color/design_default_color_error"
            app:counterTextAppearance="@style/TextAppearance.AppCompat.Body1"
            app:cursorErrorColor="@color/design_default_color_error"
            app:errorEnabled="true"
            app:errorTextColor="@color/design_default_color_error"
            app:hintAnimationEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enterNameInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email_Hint"
                android:inputType="text|textEmailAddress|textAutoComplete" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/createPasswordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="@dimen/boxCornerRadius"
            app:boxCornerRadiusBottomStart="@dimen/boxCornerRadius"
            app:boxCornerRadiusTopEnd="@dimen/boxCornerRadius"
            app:boxCornerRadiusTopStart="@dimen/boxCornerRadius"
            app:boxStrokeColor="#2F80ED"
            app:counterTextAppearance="@style/TextAppearance.AppCompat.Body1"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enterEmailInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/createPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_password_hint"
                android:inputType="text|textPassword|textAutoComplete" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="@dimen/boxCornerRadius"
            app:boxCornerRadiusBottomStart="@dimen/boxCornerRadius"
            app:boxCornerRadiusTopEnd="@dimen/boxCornerRadius"
            app:boxCornerRadiusTopStart="@dimen/boxCornerRadius"
            app:boxStrokeColor="#2F80ED"
            app:counterTextAppearance="@style/TextAppearance.AppCompat.Body1"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/createPasswordInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password_hint"
                android:inputType="text|textPassword|textAutoComplete" />
        </com.google.android.material.textfield.TextInputLayout>




        <Button
            android:id="@+id/registerButton"
            android:layout_width="144dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#2F80ED"
            android:text="@string/register_button_text"
            app:cornerRadius="7sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:strokeColor="#FFFFFF"
            app:strokeWidth="2sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_member"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/loginTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="@string/loginText"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
