<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CreateNetworkOrLogIn">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/headerLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <View
                android:id="@+id/headerDesign"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/header_design" />
            <TextView
                android:id="@+id/headerAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alfa_slab_one"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/marginRightAndBottom"
                android:layout_marginRight="@dimen/marginRightAndBottom"
                android:layout_marginBottom="@dimen/marginRightAndBottom"
                android:text="@string/WelcomeText"
                android:textColor="@color/white"
                android:textSize="@dimen/welcomeTextSize"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/OptionsLayout"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headerLayout"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/firstOptionCardView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/cardHeight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cardElevation="@dimen/cardElevation"
                app:cardCornerRadius="@dimen/cardCornerRadius">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/firstOptionText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/yellow"
                        android:textSize="@dimen/optionsTextSize"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/firstOption"
                        android:textStyle="bold" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/orText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sp"
                android:text="@string/_OR"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/firstOptionCardView" />

            <androidx.cardview.widget.CardView
                android:layout_marginTop="@dimen/_10sp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/cardHeight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/orText"
                app:cardElevation="@dimen/cardElevation"
                app:cardCornerRadius="@dimen/cardCornerRadius">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/secondOptionText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/yellow"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/secondOption"
                        android:textSize="@dimen/optionsTextSize"
                        android:textStyle="bold" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>

