<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EnterCodeForVerification">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">


        <TextView
            android:text="@string/otp_instructions"
            android:id="@+id/otpHasBeen_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.46" />

        <TextView
            android:id="@+id/numberTexView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0000000000"
            android:textColor="@color/app_theme_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/otpHasBeen_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.46" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterPhoneInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="@dimen/boxCornerRadius"
            app:boxCornerRadiusBottomStart="@dimen/boxCornerRadius"
            app:boxCornerRadiusTopEnd="@dimen/boxCornerRadius"
            app:boxCornerRadiusTopStart="@dimen/boxCornerRadius"
            app:boxStrokeColor="@color/app_theme_color"
            app:boxStrokeErrorColor="@color/design_default_color_error"
            app:counterTextAppearance="@style/TextAppearance.AppCompat.Body1"
            app:cursorErrorColor="@color/design_default_color_error"
            app:errorEnabled="true"
            app:errorTextColor="@color/design_default_color_error"
            app:hintAnimationEnabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.409"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otpHasBeen_text"
            app:layout_constraintVertical_bias="0.145">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterPhoneEditText"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/otp_hint"
                android:inputType="number|numberDecimal"
                android:maxLength="11" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/getCodeButton"
            android:layout_width="144dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/app_theme_color"
            android:text="@string/loginButtonText"
            app:cornerRadius="7sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:strokeColor="#FFFFFF"
            app:strokeWidth="2sp" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>