<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background">




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enterNameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:boxCornerRadiusBottomEnd="@dimen/boxCornerRadius"
        app:boxCornerRadiusBottomStart="@dimen/boxCornerRadius"
        app:boxCornerRadiusTopEnd="@dimen/boxCornerRadius"
        app:boxCornerRadiusTopStart="@dimen/boxCornerRadius"
        app:boxStrokeColor="@color/app_theme_color"
        app:boxStrokeErrorColor="@color/design_default_color_error"
        app:counterTextAppearance="@style/TextAppearance.AppCompat.Body1"
        app:cursorErrorColor="@color/design_default_color_error"
        app:errorEnabled="true"
        app:errorTextColor="@color/design_default_color_error"
        app:hintAnimationEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:inputType="text|textPersonName|textAutoComplete" />
    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enterPhoneNumberInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="@dimen/boxCornerRadius"
        app:boxCornerRadiusBottomStart="@dimen/boxCornerRadius"
        app:boxCornerRadiusTopEnd="@dimen/boxCornerRadius"
        app:boxCornerRadiusTopStart="@dimen/boxCornerRadius"
        app:boxStrokeColor="@color/app_theme_color"
        app:boxStrokeErrorColor="@color/design_default_color_error"
        app:counterTextAppearance="@style/TextAppearance.AppCompat.Body1"
        app:cursorErrorColor="@color/design_default_color_error"
        app:errorEnabled="true"
        app:errorTextColor="@color/design_default_color_error"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterNameInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterPhoneNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterPhoneNumberHint"
            android:inputType="text|textEmailAddress|textAutoComplete" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addMateButton"
        android:layout_width="144dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/app_theme_color"
        android:text="@string/add_mate_button_text"
        app:cornerRadius="7sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="2sp" />


</androidx.constraintlayout.widget.ConstraintLayout>